# bookverse-platform

./: .gitignore  Dockerfile  PLAN_OF_ACTION.md  README.md  entrypoint.sh  platform-deployment.yaml  pyproject.toml  requirements.txt
.github/scripts/: apptrust_rollback.py
.github/workflows/: aggregate.yml  ci.yml  platform-aggregate-promote.yml  platform-aggregate.yml  promote-platform.yml  promote.yml  promotion-rollback.yml  release-platform.yml  rollback-platform.yml
.jfrog/: config.yml
app/: __init__.py  auth.py  main.py  tagging_service.py  webhook.py
config/: auth.env  services.yaml
docs/: AGGREGATION_PATTERNS.md  RELEASE_MANAGEMENT.md
libs/bookverse-core/: .coverage  coverage.xml
libs/bookverse-core/bookverse_core.egg-info/: PKG-INFO  requires.txt
manifests/: .gitkeep  platform-2025.09.09.110218.yaml  platform-2025.09.09.140346.yaml  platform-2025.09.09.144653.yaml
scripts/: apptrust_rollback.py  determine-semver.sh  migration-summary.py  run-complete-e2e-tests.py  semver_versioning.py  validate-workflows.py
tests/: __init__.py  test_aggregator_functionality.py  test_auth.py  test_e2e_platform.py  test_tagging_logic.py  test_workflow_integration.py
web/: index.html
